# jovian_careers_website

./: LICENSE  app.py  pyproject.toml
static/css/: style.css
templates/: home.html
